--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -80,7 +80,7 @@ Enabled,Aktiviert
 "TWINT Express Checkout","TWINT Express Checkout"
 "Display screens","Anzeigebildschirme"
 "Users can see TWINT checkout buttons","Benutzer können TWINT-Checkout-Buttons sehen"
-"TWINT express","TWINT Express"
+"TWINT Express","TWINT Express"
 "History ID","Verlaufs-ID"
 Order,Bestellung
 Store,Geschäft
