--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -80,7 +80,7 @@ Enabled,Enabled
 "TWINT Express Checkout","TWINT Express Checkout"
 "Display screens","Display screens"
 "Users can see TWINT checkout buttons","Users can see TWINT checkout buttons"
-"TWINT express","TWINT express"
+"TWINT Express","TWINT Express"
 "History ID","History ID"
 Order,Order
 Store,Store
